# pod

./: .gitignore  Dockerfile  README.md  app.py  dockerfile  entrypoint.sh  get_workspaces.py  pyproject.toml  requirements.txt
static/css/: style.css
templates/: download.html  login.html  matches.html  upload.html
