[project]
name = "pods"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.0",
    "gunicorn==23.0.0",
    "pytesseract==0.3.13",
    "PyMuPDF==1.25.4",
    "regex==2024.11.6",
    "rapidfuzz==3.12.2",
    "pillow==11.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"



