[project]
name = "pods"
version = "0.1.0"
description = "POD processing Flask app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.1.0",
    "flask-cors==5.0.1",
    "gunicorn==23.0.0",
    "pytesseract==0.3.13",
    "PyMuPDF==1.25.4",
    "regex==2024.11.6",
    "rapidfuzz==3.12.2",
    "pillow==11.1.0",
    "python-dotenv==1.1.0",
    "smartsheet-python-sdk==3.0.5",
    "google-api-python-client==2.178.0",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2"
]
